# BrainRot_Battery

./: .gitignore  ACCURACY_ENHANCEMENTS.md  CHANGES_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PAC_CAT_FEATURES.md  PKGBUILD  README.md  REALTIME_FEATURES.md  REAL_TEMP_IMPLEMENTATION.md  SENSOR_DETECTION_GUIDE.md  accuracy_tips.md  main.rs  pacman_animation  pacman_animation.rs
